--- a/css/main.css
+++ b/css/main.css
@@ -2,33 +2,9 @@ body, html{
     height: 100%;
     margin: opx;
 }
-
-nav li{
-    display: inline;
-    margin: 20px;
-
-nav{
-    display: block;
-    color: white
-}
-nav ul{
+.socials{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: black;
-    margin: 0;
-    list-style-type:none;
-    width:100%
-    padding:20%
-}
-.hero-image{
-    background-image:url{../images}
-
-}
-
-.hero-text{
-    color: white
-    text-align:center;
-    postition: absolute;
-    top: 50%;
-    left: 50%;
-
-
 }
